--- a/client/src/assets/sass/base/_fonts.scss
+++ b/client/src/assets/sass/base/_fonts.scss
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=Open+Sans:300|Raleway";
-
+@import 'https://fonts.googleapis.com/css?family=Titillium+Web';
 h1,
 h2,
 h3,
