--- a/client/src/assets/sass/components/_postCard.scss
+++ b/client/src/assets/sass/components/_postCard.scss
@@ -3,47 +3,45 @@
   margin-bottom: 30px;
   min-height: 310px;
   border-radius: 2px;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  -webkit-box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.08);
-  -moz-box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.08);
-  box-shadow: 4px 4px 5px -1px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 1px 2px rgba(25, 25, 25, 0.2);
   .ck-post__image {
     max-height: 177px;
+    .overlay,
+    img {
+      border-radius: 3px 3px 0px 0px;
+    }
     .overlay {
       position: absolute;
-      width: 89.5%;
+      top: 0;
+      left: 16px;
+      right: 16px;
+      bottom: 0;
+      overflow: hidden;
       height: 177px;
       background: black;
-      opacity: 0.38;
-      transition: opacity 0.4s
+      opacity: 0.28;
+      transition: opacity 0.6s ease;
     }
     img {
       width: 100%;
       height: 177px;
       object-fit: cover;
     }
-    .ck-post__actions {
-      display: none;
-      .ck-post__favorite,
-      .ck-post__likes {
-        position: absolute;
-        top: 10px;
+    .ck-post__stats {
+      //display: none;
+      position: absolute;
+      right: 25px;
+      top: 5px;
+      i,
+      span {
+        color: $ck-orange;
       }
       i {
-        color: $ck-orange;
-        font-size: 20px;
-      }
-      .ck-post__favorite {
-        left: 26px;
-      }
-      .ck-post__likes {
-        right: 26px;
-        span {
-          padding: 0 5px;
-          color: $ck-orange;
-          font-weight: bold;
-        }
+        font-size: 18px;
+        margin-right: 5px;
       }
     }
   }
@@ -59,7 +57,7 @@
   }
   .ck-post__title {
     white-space: nowrap;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     a {
       display: block;
       overflow: hidden;
@@ -73,6 +71,21 @@
     a {
       color: $ck-black;
       font-weight: bold;
+      font-size: 15px;
+    }
+  }
+  .ck-post__stats {
+    margin-bottom: 10px;
+    span {
+      font-family: 'Titillium Web', sans-serif;
+      font-weight: bold;
+      font-size: 14px;
+      margin-right: 10px;
+    }
+    i {
+      color: #989898;
+      font-size: 14px;
+      margin-right: 5px;
     }
   }
 }
