--- a/client/src/assets/sass/pages/_profile.scss
+++ b/client/src/assets/sass/pages/_profile.scss
@@ -55,9 +55,6 @@
         margin-top: 20px;
         margin-bottom: 30px;
       }
-      .ck-profile__bio {
-        width: 80%;
-      }
     }
   }
   .ck-profile__skills {
@@ -81,6 +78,20 @@
           font-size: 15px;
         }
       }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .ck-profile__bio-skills {
+    flex-direction: column;
+    .ck-profile__bio-container {
+      width: 100%;
+    }
+    .ck-profile__skills {
+      margin-top: 20px;
+      width: 100%;
+      margin-left: 0;
     }
   }
 }
