--- a/client/src/assets/sass/layout/_footer.scss
+++ b/client/src/assets/sass/layout/_footer.scss
@@ -1,6 +1,16 @@
 footer {
   width: 100%;
-  height: 50px;
+  height: 100px;
   background: $ck-black;
   margin-top: 50px;
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  img {
+    width: 200px;
+  }
+  a {
+    margin-top: 7px;
+    color: white;
+  }
 }
