--- a/client/src/assets/sass/main.css
+++ b/client/src/assets/sass/main.css
@@ -713,9 +713,17 @@ header {
 
 footer {
   width: 100%;
-  height: 50px;
+  height: 100px;
   background: #2f2f2f;
-  margin-top: 50px; }
+  margin-top: 50px;
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: column; }
+  footer img {
+    width: 200px; }
+  footer a {
+    margin-top: 7px;
+    color: white; }
 
 .ck-dashboard__links {
   background: white;
