Fixed some mobile view mistakes and email to lowercase

--- a/client/src/assets/sass/components/_avatar.scss
+++ b/client/src/assets/sass/components/_avatar.scss
@@ -8,8 +8,7 @@
   align-items: center;
   img {
     border-radius: 500px;
-    max-width: 300px;
-    height: 300px;
+    max-width: 90%;
   }
   input {
     width: 80px;
