--- a/client/src/App.css
+++ b/client/src/App.css
@@ -371,8 +371,7 @@ td .ck-action {
   align-items: center; }
   .edit-profile__avatar img {
     border-radius: 500px;
-    max-width: 300px;
-    height: 300px; }
+    max-width: 90%; }
   .edit-profile__avatar input {
     width: 80px; }
 
@@ -807,6 +806,8 @@ footer {
     background: #f5f5f5;
     border-bottom: 1px solid #e0e0e0;
     border-radius: 0 5px 0 0; }
+    .edit-profile__container .edit-profile__top-header h1 {
+      text-align: center; }
   .edit-profile__container .edit-profile__wrapper {
     width: 80%;
     margin: auto; }
