--- a/client/src/assets/sass/pages/_editProfile.scss
+++ b/client/src/assets/sass/pages/_editProfile.scss
@@ -30,6 +30,9 @@
     background: #f5f5f5;
     border-bottom: 1px solid #e0e0e0;
     border-radius: 0 5px 0 0;
+    h1 {
+      text-align: center;
+    }
   }
   .edit-profile__wrapper {
     width: 80%;
